# leetcode

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  README.md  conftest.py  package.json  pyproject.toml
.github/workflows/: ci.yml
solutions/: 1.py  1078.py  1128.py  118.py  119.py  1195.py  12.py  125.py  13.py  136.py  14.py  1486.py  168.py  169.py  171.py  189.py  190.py  191.py  198.py  20.py  202.py  204.py  205.py  215.py  217.py  219.py  2194.py  229.py  231.py  2404.py  242.py  26.py  268.py  27.py  273.py  278.py  28.py  283.py  326.py  338.py  (+18 more)
