[project]
name = "leetcode"
version = "1.0.0"
description = "Eduard Malokhvii's LeetCode problems' solutions."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Eduard Malokhvii", email = "malokhvii.ee@gmail.com" },
]
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
  "pytest==7.1.2",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py37"

[tool.pytest.ini_options]
addopts = "--doctest-modules --no-header --no-summary"
